--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.8", "3.9"]
+        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
 
     steps:
       - uses: actions/checkout@v3
@@ -20,10 +20,10 @@ jobs:
 #        uses: srt32/git-actions@v0.0.3
 #        with:
 #          args: git config --global --add safe.directory /github/workspace && git submodule update --init --recursive
-#      - name: Install dependencies
-#        run: |
-#          python -m pip install --upgrade pip
-#          pip install flake8 pytest
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 #          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 #      - name: Lint with flake8
 #        run: |
@@ -31,6 +31,6 @@ jobs:
 #          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
 #          # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
 #          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-#      - name: Test aruco estimator
-#        run: |
-#          python scale_estimator.py --test_data
+      - name: Test aruco estimator
+        run: |
+          python pc_skeletor/skeletor.py
