added artifacts to github action

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -24,3 +24,9 @@ jobs:
         run: |
           cd pc_skeletor
           python test.py
+      - name: 'Upload Artifact'
+        uses: actions/upload-artifact@v3
+        with:
+          name: skeleton-artifact
+          path: ./data/02_sceleton.ply
+          retention-days: 5
