added artifacts to github action

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -24,6 +24,8 @@ jobs:
         run: |
           cd pc_skeletor
           python test.py
+          ls -la 
+          ls -la data
       - name: 'Upload Artifact'
         uses: actions/upload-artifact@v3
         with:
