--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -30,5 +30,5 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: skeleton-artifact
-          path: ./data/02_sceleton.ply
+          path: data/
           retention-days: 5
