--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
 img/lbc.gif filter=lfs diff=lfs merge=lfs -text
 img/slbc.gif filter=lfs diff=lfs merge=lfs -text
 img/s_lbc.gif filter=lfs diff=lfs merge=lfs -text
+docs/_static/lbc.gif filter=lfs diff=lfs merge=lfs -text
+docs/_static/s_lbc.gif filter=lfs diff=lfs merge=lfs -text
