removed read the docs

--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,7 @@ img/slbc.gif filter=lfs diff=lfs merge=lfs -text
 img/s_lbc.gif filter=lfs diff=lfs merge=lfs -text
 docs/_static/lbc.gif filter=lfs diff=lfs merge=lfs -text
 docs/_static/s_lbc.gif filter=lfs diff=lfs merge=lfs -text
+img/pc_principle.jpg filter=lfs diff=lfs merge=lfs -text
+img/PCSkeletor_left.png filter=lfs diff=lfs merge=lfs -text
+img/PCSkeletor.png filter=lfs diff=lfs merge=lfs -text
+img/skeletor_south_park.png filter=lfs diff=lfs merge=lfs -text
