--- a/.gitattributes
+++ b/.gitattributes
@@ -7,3 +7,6 @@ img/pc_principle.jpg filter=lfs diff=lfs merge=lfs -text
 img/PCSkeletor_left.png filter=lfs diff=lfs merge=lfs -text
 img/PCSkeletor.png filter=lfs diff=lfs merge=lfs -text
 img/skeletor_south_park.png filter=lfs diff=lfs merge=lfs -text
+img/ filter=lfs diff=lfs merge=lfs -text
+img/contracted.gif filter=lfs diff=lfs merge=lfs -text
+img/topology.gif filter=lfs diff=lfs merge=lfs -text
