--- a/.gitattributes
+++ b/.gitattributes
@@ -10,3 +10,5 @@ img/skeletor_south_park.png filter=lfs diff=lfs merge=lfs -text
 img/ filter=lfs diff=lfs merge=lfs -text
 img/contracted.gif filter=lfs diff=lfs merge=lfs -text
 img/topology.gif filter=lfs diff=lfs merge=lfs -text
+img/skeletal_graph.png filter=lfs diff=lfs merge=lfs -text
+img/topology_graph.png filter=lfs diff=lfs merge=lfs -text
