--- a/.gitattributes
+++ b/.gitattributes
@@ -14,3 +14,5 @@ img/skeletal_graph.png filter=lfs diff=lfs merge=lfs -text
 img/topology_graph.png filter=lfs diff=lfs merge=lfs -text
 img/contracted_cropped.gif filter=lfs diff=lfs merge=lfs -text
 img/topology_cropped.gif filter=lfs diff=lfs merge=lfs -text
+img/topology_graph_cropped.png filter=lfs diff=lfs merge=lfs -text
+img/skeletal_graph_cropped.png filter=lfs diff=lfs merge=lfs -text
