--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -18,8 +18,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: 'Install dependencies'
         run: |
-          python -m pip install --upgrade pip
-          pip install --upgrade pip setuptools
+          ./setup_env.sh
           pip install .
       - name: 'Test PC Skeletor'
         run: |
