--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -18,6 +18,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: 'Install dependencies'
         run: |
+          pip install pip==21.3.1
           pip install --upgrade pip setuptools
           git clone https://github.com/meyerls/mistree.git
           cd mistree 
