--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -20,6 +20,7 @@ jobs:
         run: |
           pip install pip==21.3.1
           pip install numpy --use-deprecated=legacy-resolver
+          pip install f2py
           pip install --upgrade pip setuptools
           git clone https://github.com/meyerls/mistree.git
           cd mistree 
