--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -18,10 +18,11 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: 'Install dependencies'
         run: |
+          pip install --upgrade 
+          pip install --upgrade pip setuptools
           pip install pip==21.3.1
           pip install numpy --use-deprecated=legacy-resolver
           pip install f2py
-          pip install --upgrade pip setuptools
           git clone https://github.com/meyerls/mistree.git
           cd mistree 
           pip install -e .
