fix github action

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -21,6 +21,7 @@ jobs:
           pip install --upgrade pip setuptools
           pip install pip==21.3.1
           pip install numpy --use-deprecated=legacy-resolver
+          pip install charset_normalizer
           git clone https://github.com/meyerls/mistree.git
           cd mistree 
           pip install -e .
