--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -22,15 +22,8 @@ jobs:
           pip install pip==21.3.1
           pip install numpy --use-deprecated=legacy-resolver
           pip install charset_normalizer
-          git clone https://github.com/meyerls/mistree.git
-          cd mistree 
-          pip install -e .
-          cd ..
           pip install -r requirements.txt
           pip install .
-      #- name: 'Test PC Skeletor'
-      #  run: |
-      #    pytest .
-      #    ls -la
-      #    ls -la ${{ github.workspace }}
-      #    pwd
+      - name: 'Test PC Skeletor'
+        run: |
+          pytest test
