--- a/setup.cfg
+++ b/setup.cfg
@@ -8,6 +8,16 @@ license = MIT
 author = Lukas Meyer
 author_email = lukas.meyer@fau.de
 url = https://github.com/meyerls/PC-Skeletor
+classifiers =
+    Programming Language : : Python :: 3.7
+    Programming Language : : Python :: 3.8
+    Programming Language : : Python :: 3.9
+    Programming Language : : Python :: 3.10
+    License : : OSI Approved :: MIT License
+    Operating System : : OS Independent
+    Topic : : Scientific/Engineering
+    Topic : : Scientific/Engineering :: Computer Vision
+    Topic : : Scientific/Engineering :: Agriculture
 
 [options]
 packages = find:
@@ -35,14 +45,3 @@ exclude =
 [options.extras_require]
 dev =
     pytest
-
-[options.classifiers]
-Programming Language : : Python :: 3.7
-Programming Language : : Python :: 3.8
-Programming Language : : Python :: 3.9
-Programming Language : : Python :: 3.10
-License : : OSI Approved :: MIT License
-Operating System : : OS Independent
-Topic : : Scientific/Engineering
-Topic : : Scientific/Engineering :: Computer Vision
-Topic : : Scientific/Engineering :: Agriculture
